<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/oranzine"
    tools:context="com.example.spalvos.nustatymai">

    <EditText
        android:id="@+id/vardas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textColor="@color/raudonaTamsi"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/irasytiVarda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/irasytiVarda"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="11dp"
        android:background="@android:color/holo_blue_dark"
        android:fontFamily="casual"
        android:text="@string/set_name"
        android:textColor="@color/raudonaTamsi"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/antraste2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vardas" />

    <TextView
        android:id="@+id/greitis"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:textColor="@color/raudonaTamsi"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/keistiGreiti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/antraste2" />

    <Button
        android:id="@+id/keistiGreiti"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="150dp"
        android:background="@android:color/holo_blue_dark"
        android:fontFamily="casual"
        android:text="@string/change_game_speed"
        android:textColor="@color/raudonaTamsi"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greitis" />

    <TextView
        android:id="@+id/antraste1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="casual"
        android:text="@string/your_name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/vardas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/antraste2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="casual"
        android:text="@string/game_speed"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/greitis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/irasytiVarda" />

</android.support.constraint.ConstraintLayout>
