<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/oranzine"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/paveiksliukas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/colorwheel" />

    <Button
        android:id="@+id/pradeti"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/holo_blue_dark"
        android:fontFamily="casual"
        android:text="@string/pradeti"
        android:textColor="@color/raudonaTamsi"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/rezultatai"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paveiksliukas" />

    <Button
        android:id="@+id/nustatymai"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="80dp"
        android:background="@android:color/holo_blue_dark"
        android:fontFamily="casual"
        android:text="@string/nustatymai"
        android:textColor="@color/raudonaTamsi"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rezultatai" />

    <Button
        android:id="@+id/rezultatai"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/holo_blue_dark"
        android:fontFamily="casual"
        android:text="@string/rezultatai"
        android:textColor="@color/raudonaTamsi"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/nustatymai"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pradeti" />

</android.support.constraint.ConstraintLayout>