<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/oranzine"
    tools:context="com.example.spalvos.pabaiga">

    <TextView
        android:id="@+id/GameOver"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="casual"
        android:text="@string/game_over"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/taskaiUzrasas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48000002" />

    <TextView
        android:id="@+id/taskaiUzrasas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="casual"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/zaisti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GameOver" />

    <Button
        android:id="@+id/zaisti"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/holo_blue_dark"
        android:fontFamily="casual"
        android:text="@string/play_again"
        android:textColor="@color/raudonaTamsi"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/baigti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskaiUzrasas" />

    <Button
        android:id="@+id/baigti"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="50dp"
        android:background="@android:color/holo_blue_dark"
        android:fontFamily="casual"
        android:text="@string/menu"
        android:textColor="@color/raudonaTamsi"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zaisti" />
</android.support.constraint.ConstraintLayout>
